argocd/apps/demo/gateway-resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-demo
spec:
  gatewayClassName: envoy
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchExpressions:
          - key: kubernetes.io/metadata.name
            operator: In
            values:
            - envoy-gateway-system
            - cert-manager
  - name: https-opencost-ui
    protocol: HTTPS
    port: 443
    hostname: demo.infra.opencost.io
    tls:
      mode: Terminate
      certificateRefs:
      - name: opencost-tls
        kind: Secret
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-opencost-mcp
    protocol: HTTPS
    port: 443
    hostname: mcp-demo.infra.opencost.io
    tls:
      mode: Terminate
      certificateRefs:
      - name: opencost-mcp-tls
        kind: Secret
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-prometheus
    protocol: HTTPS
    port: 443
    hostname: demo-prometheus.infra.opencost.io
    tls:
      mode: Terminate
      certificateRefs:
      - name: prometheus-tls
        kind: Secret
    allowedRoutes:
      namespaces:
        from: Same
