argocd/apps/demo/gateway-resources/httproute-opencost-mcp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencost-mcp
  namespace: opencost
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: https-opencost-mcp
  hostnames:
  - mcp-demo.infra.opencost.io
  rules:
  - backendRefs:
    - name: opencost-demo
      port: 8081
