argocd/apps/demo/gateway-resources/httproute-opencost.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencost-ui
  namespace: envoy-gateway-system
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: https-opencost-ui
  hostnames:
  - demo.infra.opencost.io
  rules:
  - backendRefs:
    - name: opencost-demo
      namespace: opencost
      port: 9090
